--- a/angular.json
+++ b/angular.json
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "gate-client:build:production"
+              "buildTarget": "gate-client:build:production"
             },
             "development": {
-              "browserTarget": "gate-client:build:development"
+              "buildTarget": "gate-client:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -75,7 +75,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "gate-client:build"
+            "buildTarget": "gate-client:build"
           }
         },
         "test": {
