--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.3",
     "@angular/platform-browser-dynamic": "^17.3.3",
     "@angular/router": "^17.3.3",
+    "angularx-qrcode": "^17.0.0",
     "http-client": "^4.3.1",
     "ng-qrcode": "^17.0.0",
     "rxjs": "~7.5.0",
@@ -29,6 +30,7 @@
     "@angular/cli": "~17.3.3",
     "@angular/compiler-cli": "^17.3.3",
     "@types/jasmine": "~4.0.0",
+    "@types/qrcode": "^1.5.5",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
