--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.3",
     "@angular/platform-browser-dynamic": "^17.3.3",
     "@angular/router": "^17.3.3",
+    "@auth0/angular-jwt": "^5.2.0",
     "angularx-qrcode": "^17.0.0",
     "http-client": "^4.3.1",
     "ng-qrcode": "^17.0.0",
